monitoring/checkmk/checkmk-service.yml
apiVersion: v1
kind: Service
metadata:
  name: checkmk
spec:
  ports:
  - name: web
    port: 5000
  selector:
    application: checkmk
